--- a/todo/.eslintrc.json
+++ b/todo/.eslintrc.json
@@ -21,10 +21,12 @@
     "plugins": ["react", "prettier", "import"],
     "rules": {
       "indent": ["error", 2],
-      "prettier/prettier": "error",
+      "prettier/prettier": ["error", {
+        "endOfLine":"auto"
+      }],
       "linebreak-style": [0, "unix"],
       "quotes": ["error", "single"],
-      //    "semi": ["error", "never"],
+      //  "semi": ["error", "never"],
       "react/react-in-jsx-scope": "off",
       "react/prop-types": 0,
       "import/no-unresolved": [2, { "caseSensitive": false }],
